Improve book blurbs and fix tile heights
- Rewrite 4 weak blurbs (10% Happier, Wings of Fire, Sapiens, Dalai Lama's Cat)
- Add line-clamp to blurbs (4 lines max, like work tiles)
- Fixes uneven tile heights from variable blurb length

--- a/reading-list-styles.css
+++ b/reading-list-styles.css
@@ -174,7 +174,10 @@
     line-height: 1.5;
     color: #444;
     margin: 0;
-    flex-grow: 1;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 /* Loading States */
